--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     specific language governing permissions and limitations
     under the License.
 -->
+
 <html><head>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
@@ -25,6 +26,24 @@
 			   console.log("Fechando Aplicação");
 			   navigator.app.exitApp();
 			}
+			
+			useExistingPhoto: function(e) {
+			  this.capture(Camera.PictureSourceType.SAVEDPHOTOALBUM);
+			};
+			
+			// take a new photo:
+			takePhoto: function(e) {
+			  this.capture(Camera.PictureSourceType.CAMERA);
+			};
+			
+			// capture either new or existing photo:
+			capture: function(sourceType) {
+			  navigator.camera.getPicture(this.onCaptureSuccess, this.onCaptureFail, {
+				destinationType: Camera.DestinationType.FILE_URI,
+				sourceType: sourceType,
+				correctOrientation: true
+			  });
+			};
 		</script>
         <!--JS-->
 		<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
@@ -295,7 +314,7 @@ function drawRotated(degrees){
     ctx.restore();
 }
 </script>
-    	<!--<a onClick="exitFromApp();" title="fexar" class="fechar">&times;</a>-->
+    	<a onClick="useExistingPhoto();" title="fexar" class="fechar">&times;</a>
            <!-- <iframe src="http://flagship1.hospedagemdesites.ws/intranet/reuniao/index.asp" width="100%" height="100%" scrolling="auto" frameborder="0">
 </iframe>
         <!--</div>-->
