--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			   navigator.app.exitApp();
 			}
 			
-			useExistingPhoto: function(e) {
+			 function useExistingPhoto(e) {
 			  this.capture(Camera.PictureSourceType.SAVEDPHOTOALBUM);
 			};
 			
