--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
             	<section>
                     <h1>Bem-vinda!</h1>
                     <img src="images/pontos.png" alt="divisória">
-                    <input type="file" id="file" style="float:left; width: 250px">
                     <h2>Vamos postar?</h2>
             	</section>
             </header>
@@ -106,7 +105,9 @@
                 </div>
             	<input type="file" id="file">
             </form>
-            <div class="btn"><img src="images/logo.png" alt="escolha um arquivo" class="pulse pulso"></div>
+            
+            <div class="btn">
+                    <!--<input type="file" id="file" style="float:left; width: 250px">--><img src="images/logo.png" alt="escolha um arquivo" class="pulse pulso"></div>
             <footer>
             	<div class="insta_logo">
                 	<img src="images/insta.jpg" alt="Logo Instagram">
