--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         
                     </div>    
                 </div>
-            	<input type="file" id="file">
+            	<!--<input type="file" id="file">-->
             </form>
             
             <div class="btn">
