--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
             </form>
             
             <div class="btn">
-                    <!--<input type="file" id="file" style="float:left; width: 250px">--><img src="images/logo.png" alt="escolha um arquivo" class="pulse pulso"></div>
+            		<input type="file" id="file" style="float:left; width: 250px">
+                    <!--<input type="file" id="file" style="float:left; width: 250px">--><img src="images/logo.png" alt="escolha um arquivo" class="pulse pulso">
+            </div>
             <footer>
             	<div class="insta_logo">
                 	<img src="images/insta.jpg" alt="Logo Instagram">
