--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>App Moda it</title>
     </head>
-    <body>
+    <body onload="init();">
      <div id="geral">
     	<!--PAGINA UM-->
         <div data-role="page" id="home" class="envelope">
