--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             	</section>
             </header>
             <footer>
-            	<div class="btn2"><img src="images/back.png" class="rotate"></div>
+            	<!--<div class="btn2"><img src="images/back.png" class="rotate"></div>-->
             	<div class="select sele_est">
                 		<img src="images/left.png" class="left_msk">
                         <img src="images/right.png" class="right_msk">
