--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </form>
             
             <div class="btn">
-            		<input type="file" id="file" class="tete" style="float:left; width: 250px;display:none">
+            		<input type="file" id="file" class="tete" style="float:left; width: 250px;">
                     <!--<input type="file" id="file" style="float:left; width: 250px">--><img src="images/logo.png" alt="escolha um arquivo" class="pulse pulso">
             </div>
             <footer>
